topic list autor sort

--- a/forum/src/main/webapp/pages/list_topics.html
+++ b/forum/src/main/webapp/pages/list_topics.html
@@ -5,13 +5,23 @@
 	<table class="table table-hover table-striped table-bordered">
 	    <thead>
 	        <tr>
-	            <td>Titulo</td>
-	            <td>Mensagem</td>
-	            <td>Autor</td>
+				<td>
+					<a ng-click="sortType = 'titulo'; sortReverse = !sortReverse" class="nounderline_imp">
+						Titulo
+					    <span ng-show="(sortType == 'titulo' && !sortReverse) || sortType != 'titulo'" class="fa fa-caret-down"></span>
+					    <span ng-show="(sortType == 'titulo' && sortReverse)  || sortType != 'titulo'" class="fa fa-caret-up"></span>
+					</a>
+				</td>
+	            <td>
+					Mensagem
+	            </td>
+	            <td>
+					Autor
+	            </td>
 	        </tr>
 	    </thead>
 	    <tbody>
-	        <tr ng-repeat="topic in topics | filter:query | orderBy:orderby">
+	        <tr ng-repeat="topic in topics | orderBy:sortType:sortReverse">
 	            <td><a href="#topic_details/{{topic.idtopico}}" class="thumb">{{topic.titulo}}</a></td>
 	            <td>{{topic.mensagem}}</td>
 	            <td>{{topic.autor}}</td>
