--- a/forum/src/main/webapp/pages/create_topic.html
+++ b/forum/src/main/webapp/pages/create_topic.html
@@ -1,5 +1,5 @@
-<div class="jumbotron text-center" style="max-width: 960px; margin: 0 auto;">
-	<h2>Criar topico</h2>
+<div class="jumbotron text-center" style="max-width: 1024px; margin: 0 auto;">
+	<h2>{{title}}</h2>
 
 	<div class="form-group">
 		<label for="topic_title" class="pull-left">Titulo</label>
