--- a/forum/src/main/webapp/pages/home.html
+++ b/forum/src/main/webapp/pages/home.html
@@ -1,3 +1,3 @@
-<div class="jumbotron text-center" style="max-width: 960px; margin: 0 auto;">
-	<h1>{{ message }}</h1>
+<div class="jumbotron text-center" style="max-width: 1200px; margin: 0 auto;">
+	<h1>{{ title }}</h1>
 </div>
