--- a/forum/src/main/webapp/pages/topic_details.html
+++ b/forum/src/main/webapp/pages/topic_details.html
@@ -1,5 +1,5 @@
-<div class="jumbotron text-center" style="max-width: 960px; margin: 0 auto;">
-	<h2>Detalhes de Topico</h2>
+<div class="jumbotron text-center" style="max-width: 1024px; margin: 0 auto;">
+	<h2>{{title}}</h2>
 
 	<h3>{{topic.titulo}}</h3>
 	
@@ -15,7 +15,7 @@
 	        </tr>
 	    </tbody>
 	</table>
-	
+
 	<div class="form-group">
 		<label for="topic_reply_autor" class="pull-left">Autor</label>
 		<input type="text" class="form-control" id="topic_reply_autor" ng-model="topic.reply.autor" placeholder="John Doe">
