--- a/forum/src/main/webapp/pages/topic_details.html
+++ b/forum/src/main/webapp/pages/topic_details.html
@@ -6,12 +6,14 @@
 	<table class="table table-hover table-striped table-bordered text-left">
 	    <tbody>
 	        <tr>
-	            <td style="width: 25%;">{{topic.autor}}</td>
+	        	<td style="width: 10%;">{{topic.data_criacao | date:'dd/MM/yyyy  HH:mm:ss'}}</td>
+	            <td style="width: 15%;">{{topic.autor}}</td>
 	            <td style="width: 75%;">{{topic.mensagem}}</td>
 	        </tr>
-	        <tr ng-repeat="reply in replies">
-	            <td style="width: 25%;">{{reply.autor}}</td>
-	            <td style="width: 75%;">{{reply.mensagem}}</td>
+	        <tr ng-repeat="reply in replies | orderBy: 'data_criacao'">
+	        	<td style="width: 10%;">{{reply.data_criacao | date:'dd/MM/yyyy  HH:mm:ss'}}</td>
+	            <td style="width: 15%; text-align: left;">{{reply.autor}}</td>
+	            <td style="width: 75%; text-align: left;">{{reply.mensagem}}</td>
 	        </tr>
 	    </tbody>
 	</table>
