--- a/forum/src/main/webapp/pages/topic_details.html
+++ b/forum/src/main/webapp/pages/topic_details.html
@@ -3,17 +3,17 @@
 
 	<h3>{{topic.titulo}}</h3>
 	
-	<table class="table table-hover table-striped table-bordered text-left">
+	<table class="table table-hover table-striped table-bordered text-left" style="font-size: 13px;">
 	    <tbody>
 	        <tr>
-	        	<td style="width: 10%;">{{topic.data_criacao | date:'dd/MM/yyyy  HH:mm:ss'}}</td>
-	            <td style="width: 15%;">{{topic.autor}}</td>
+	        	<td style="width: 10%; font-weight: bold;">{{topic.data_criacao | date:'dd/MM/yyyy  HH:mm:ss'}}</td>
+	            <td style="width: 15%; font-weight: bold;">{{topic.autor}}</td>
 	            <td style="width: 75%;">{{topic.mensagem}}</td>
 	        </tr>
 	        <tr ng-repeat="reply in replies | orderBy: 'data_criacao'">
-	        	<td style="width: 10%;">{{reply.data_criacao | date:'dd/MM/yyyy  HH:mm:ss'}}</td>
-	            <td style="width: 15%; text-align: left;">{{reply.autor}}</td>
-	            <td style="width: 75%; text-align: left;">{{reply.mensagem}}</td>
+	        	<td style="width: 10%; font-weight: bold;">{{reply.data_criacao | date:'dd/MM/yyyy  HH:mm:ss'}}</td>
+	            <td style="width: 15%; font-weight: bold;">{{reply.autor}}</td>
+	            <td style="width: 75%;">{{reply.mensagem}}</td>
 	        </tr>
 	    </tbody>
 	</table>
